--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{   ROSE2226 }}
+          password: ${{ Athienoritah@24 }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
